--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,8 +1,11 @@
 // Uncomment if you want bootstrap
 // @import "bootstrap-scss";
+@import './colors.scss';
 @import './searchbox.scss';
 @import './table.scss';
 @import './notfound.scss';
+@import './nav.scss';
+@import './main.scss';
 
 html,
 body {
@@ -11,10 +14,23 @@ body {
   padding: 0;
   margin: 0;
   min-height: 100vh;
+  min-width: 100%;
   color: rgb(29, 29, 29);
 }
+.picture {
+  position: relative;
+  &.wide {
+    width: 100%;
+    display: block;
+    height: calc(100vh - 120px);
+    min-height: 657px;
+    display: block;
+  }
+}
+
 #root {
   min-height: 100vh;
+  width: 100vw;
   position: relative;
 }
 .TitleBar {
@@ -36,20 +52,8 @@ body {
   left: 62px;
   top: 7px;
 }
-.Navbar {
-  position: absolute;
-  min-height: 100%;
-  width: 200px;
-  background-color: white;
-  top: 0;
-  padding-top: 63px;
-  border-right: 1px solid rgb(192, 192, 192);
-  padding-left: 0px;
-}
 .Container {
-  margin-left: 200px;
-  padding-left: 20px;
-  border-top: 1px solid rgb(192, 192, 192);
+  // border-top: 1px solid rgb(192, 192, 192);
 }
 .Navbar > ul {
   & > li {
@@ -119,4 +123,7 @@ button {
   &.selected {
     background-color: rgb(192, 192, 192);
   }
+}
+.content {
+  padding: 20px;
 }
