--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -42,28 +42,67 @@
     width: 258px;
   }
   .nav-ham {
-    border: 1px solid green;
     position: absolute;
     right: 10px;
-    top: 20px;
+    top: 39px;
+    height: 45px;
+    visibility: hidden;
+    @media (max-width: 980px) {
+      visibility: visible;
+    }
   }
 }
 .nav-sidebar {
+  visibility: hidden;
+
+  @media (max-width: 980px) {
+    visibility: visible;
+  }
   height: 100vh;
-  width: 300px;
+  width: 200px;
   position: absolute;
-  right: -300px;
+  width: 0;
   top: 0;
+  right: 0;
   z-index: 1000;
   transition: 0.3s;
-  background-color: rgba(255, 255, 255, 0.699);
+  background-color: white;
+  overflow: hidden;
   &.active {
-    right: 0;
+    width: 200px;
     transition: 0.3s;
   }
 
   & > .nav-sidebar-close {
     left: 4px;
     top: 4px;
+    height: 20px;
+  }
+  & > .nav-sidebar-container {
+    padding: 15px;
+    padding-left: 0;
+    & > .nav-button {
+      margin: 7px;
+      margin-left: 0;
+      color: $nav-text;
+      font-size: 24px;
+      & > a {
+        padding-bottom: 4px;
+        width: 100%;
+        text-decoration: none;
+        margin-left: 0;
+        color: $nav-text;
+        border-left: 5px solid transparent;
+        font-size: 20px;
+        padding-left: 3px;
+
+        &:visited {
+          color: $nav-text;
+        }
+        &.selected {
+          border-left: 5px solid orange;
+        }
+      }
+    }
   }
 }
