--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -90,3 +90,38 @@
     font-size: 20px;
   }
 }
+.main-section {
+  width: 100%;
+  background-color: #ffbe98;
+  padding: 10px;
+  display: grid;
+  grid-template-columns: 25% 25% 25% 25%;
+  padding-left: 20%;
+  padding-right: 20%;
+  width: 60%;
+  column-gap: 60px;
+  padding-top: 90px;
+
+  & > .logo-text {
+    transform: translateX(-90px);
+    display: grid;
+    text-align: center;
+    grid-template-columns: 100%;
+    grid-template-rows: 50% 15% 15%;
+
+    & > img {
+      margin-left: auto;
+      margin-right: auto;
+      height: 120px;
+    }
+    & > h1 {
+      display: inline-block;
+      color: #262323;
+      font-size: 24px;
+    }
+    & > p {
+      display: inline-block;
+      justify-self: start;
+    }
+  }
+}
